gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/dtorfields_attributes.d
version https://git-lfs.github.com/spec/v1
oid sha256:c7435bb7bcaa502dc613e493de5a60941435684225d32c617c7ee98db77e4b44
size 2131
